--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,28 +9,23 @@
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
-
-[[main]]
-  name = "Projects"
+  name = "Publications"
   url = "#projects"
+  weight = 20
+  
+[[main]]
+  name = "Code"
+  url = "#posts"
   weight = 30
 
 [[main]]
-  name = "Publications"
+  name = "Teaching"
   url = "#featured"
   weight = 40
 
-[[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 60
-
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+ [[main]]
+    name = "CV"
+    url = "Weissman_CV_March2020"
+    weight = 50
