--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -27,5 +27,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
  [[main]]
     name = "CV"
-    url = "#Contact"
+    url = "files/cv.pdf"
     weight = 50
